--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -235,10 +235,10 @@
                             <span class="nav-label">Eventos</span><i class="fa fa-angle-left arrow"></i></a>
                         <ul class="nav-2-level collapse">
                             <li>
-                                <a href="form_basic.html">Basic Forms</a>
+                                <a  asp-area="" asp-controller="eventosliturgicos" asp-action="Create">Crear Evento</a>
                             </li>
                             <li>
-                                <a href="form_advanced.html">Advanced Plugins</a>
+                                <a  asp-area="" asp-controller="eventosliturgicos" asp-action="Index">Calendario</a>
                             </li>
                             <li>
                                 <a href="form_masks.html">Form input masks</a>
