--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -256,10 +256,13 @@
                             <span class="nav-label">Asistencias</span><i class="fa fa-angle-left arrow"></i></a>
                         <ul class="nav-2-level collapse">
                             <li>
-                                <a href="table_basic.html">Basic Tables</a>
+                                <a  asp-area="" asp-controller="Asistencia" asp-action="RegistrarEntrada">Marcar asistencia</a>
                             </li>
                             <li>
-                                <a href="datatables.html">Datatables</a>
+                                <a  asp-area="" asp-controller="Asistencia" asp-action="FiltrarPorDocumento">Historial asistencia</a>
+                            </li>
+                            <li>
+                                <a  asp-area="" asp-controller="Asistencia" asp-action="MostrarEventosProgramados">Eventos programados</a>
                             </li>
                         </ul>
                     </li>
